/* jshint esversion: 8 */

/**
 * SPDX-FileCopyrightText: 2022-2024 Jankari Tech Pvt. Ltd.
 * SPDX-FileCopyrightText: 2023 Nextcloud GmbH and Nextcloud contributors
 * SPDX-License-Identifier: AGPL-3.0-or-later
 */

import { shallowMount, mount } from '@vue/test-utils'
import { describe, expect, it, beforeEach, vi } from 'vitest'
import util from 'util'
import flushPromises from 'flush-promises'
import axios from '@nextcloud/axios'
import { generateOcsUrl } from '@nextcloud/router'
import { getCurrentUser } from '@nextcloud/auth'

import ProjectsTab from '../../../src/views/ProjectsTab.vue'
import { STATE, AUTH_METHOD } from '../../../src/utils.js'
import workPackagesSearchResponse from '../fixtures/workPackagesSearchResponse.json'
import { workpackageHelper } from '../../../src/utils/workpackageHelper.js'

vi.mock(import('@nextcloud/axios'))
vi.mock(import('@nextcloud/auth'), async (importOriginal) => {
	const originalModule = await importOriginal()
	return {
		__esModule: true,
		...originalModule,
		default: vi.fn(),
		getCurrentUser: vi.fn().mockReturnValue({ uid: 1234 }),
	}
})
vi.mock(import('@nextcloud/dialogs'), () => ({
	getLanguage: vi.fn(() => ''),
	showError: vi.fn(),
	showSuccess: vi.fn(),
}))

vi.mock(import('@nextcloud/initial-state'), async (importOriginal) => {
	const originalModule = await importOriginal()
	return {
		__esModule: true,
		...originalModule,
		default: vi.fn(),
		loadState: vi.fn(() => ({ version: '32' })),
	}
})

window.HTMLElement.prototype.scrollIntoView = vi.fn()
const scrollSpy = vi.spyOn(window.HTMLElement.prototype, 'scrollIntoView')

// url
const wpFileIdUrl = generateOcsUrl('/apps/integration_openproject/api/v1/work-packages?fileId=%s')
const statusUrl = generateOcsUrl('/apps/integration_openproject/api/v1/statuses/%s')
const typesUrl = generateOcsUrl('/apps/integration_openproject/api/v1/types/%s')
const wpFileLinksUrl = generateOcsUrl('/apps/integration_openproject/api/v1/work-packages/%s/file-links')
const fileLinksUrl = generateOcsUrl('/apps/integration_openproject/api/v1/file-links/%s')

const fileOne = { fileid: 1, basename: 'lorem.txt', dirname: '/' }
const fileTwo = { fileid: 2, basename: 'epsum.txt', dirname: '/' }

describe('ProjectsTab.vue', () => {
	let wrapper
	const loadingIndicatorSelector = '.loading-spinner'
	const emptyContentSelector = '#openproject-empty-content'
	const workPackagesSelector = '#openproject-linked-workpackages'
	const existingRelationSelector = '.existing-relations'
	const searchInputStubSelector = 'search-input-stub'
	const linkedWorkpackageSelector = '.workpackage'
	const workPackageUnlinkSelector = '.linked-workpackages--workpackage--unlinkactionbutton'

	beforeEach(() => {
		vi.useFakeTimers()
		wrapper = shallowMount(ProjectsTab, {
			props: {
				node: fileOne,
			},
			data: () => ({
				authMethod: AUTH_METHOD.OAUTH2,
				isAdminConfigOk: false,
			}),
		})
	})
	describe('search input existence', () => {
		it('should not exist if admin config is not ok', async () => {
			await wrapper.setData({
				isAdminConfigOk: false,
			})
			expect(wrapper.find(searchInputStubSelector).exists()).toBeFalsy()
		})
		it.each([
			{ state: STATE.NO_TOKEN },
			{ state: STATE.CONNECTION_ERROR },
			{ state: STATE.ERROR },
		])('should not exist if the wrapper is not in "ok" state', async (cases) => {
			await wrapper.setData({
				isAdminConfigOk: true,
				state: cases.STATE,
			})
			expect(wrapper.find(searchInputStubSelector).exists()).toBeFalsy()
		})
		it('should exist if the admin config is ok and the wrapper is in "ok" state', async () => {
			await wrapper.setData({
				isAdminConfigOk: true,
				state: STATE.OK,
			})
			expect(wrapper.find(searchInputStubSelector).exists()).toBeTruthy()
		})
	})
	describe('loading icon', () => {
		it('shows the loading icon during "loading" state', async () => {
			wrapper.setData({ state: STATE.LOADING })
			await flushPromises()
			expect(wrapper.find(loadingIndicatorSelector).exists()).toBeTruthy()
		})
		it('does not show the empty content message during "loading" state', async () => {
			wrapper.setData({ state: STATE.LOADING })
			await flushPromises()
			expect(wrapper.find(emptyContentSelector).exists()).toBeFalsy()
		})
		it.each([STATE.OK, STATE.ERROR])('makes the loading icon disappear on state change', async (state) => {
			wrapper.setData({ state: STATE.LOADING })
			await flushPromises()
			expect(wrapper.find(loadingIndicatorSelector).exists()).toBeTruthy()
			wrapper.setData({ state })
			await flushPromises()
			expect(wrapper.find(loadingIndicatorSelector).exists()).toBeFalsy()
		})
	})
	describe('empty content', () => {
		it.each([STATE.NO_TOKEN, STATE.ERROR, STATE.OK])('shows the empty message when state is other than loading', async (state) => {
			wrapper.setData({ state })
			await flushPromises()
			expect(wrapper.find(emptyContentSelector).exists()).toBeTruthy()
		})
		it('should set projects as empty when the list of linked work packages are empty', () => {
			expect(wrapper.classes()).toContain('projects--empty')
		})
	})
	describe('fetchWorkpackages', () => {
		let axiosGetSpy = vi.fn()
		beforeEach(() => {
			axiosGetSpy.mockRestore()
			workpackageHelper.clearCache()
		})
		it.each([
			{ HTTPStatus: 400, AppState: STATE.FAILED_FETCHING_WORKPACKAGES },
			{ HTTPStatus: 401, AppState: STATE.NO_TOKEN },
			{ HTTPStatus: 402, AppState: STATE.FAILED_FETCHING_WORKPACKAGES },
			{ HTTPStatus: 404, AppState: STATE.CONNECTION_ERROR },
			{ HTTPStatus: 500, AppState: STATE.ERROR },
		])('sets states according to HTTP error code: %s', async ({ HTTPStatus, AppState }) => {
			const err = new Error()
			err.response = { status: HTTPStatus }
			axios.get.mockRejectedValueOnce(err)
			await wrapper.setData({ isAdminConfigOk: true })
			await wrapper.setProps({ node: fileTwo })
			await flushPromises()
			expect(wrapper.vm.state).toBe(AppState)
		})
		it.each([
			null,
			'string',
			undefined,
			[{ // missing id
				subject: 'subject',
				_links: {
					status: {
						href: '/api/v3/statuses/12',
						title: 'open',
					},
					type: {
						href: '/api/v3/types/6',
						title: 'Task',
					},
					assignee: {
						href: '/api/v3/users/1',
						title: 'Bal Bahadur Pun',
					},
					project: { title: 'a big project' },
				},
			}],
			[{ // empty subject
				id: 123,
				subject: '',
				_links: {
					status: {
						href: '/api/v3/statuses/12',
						title: 'open',
					},
					type: {
						href: '/api/v3/types/6',
						title: 'Task',
					},
					assignee: {
						href: '/api/v3/users/1',
						title: 'Bal Bahadur Pun',
					},
					project: { title: 'a big project' },
				},
			}],
			[{ // missing subject
				id: 123,
				_links: {
					status: {
						href: '/api/v3/statuses/12',
						title: 'open',
					},
					type: {
						href: '/api/v3/types/6',
						title: 'Task',
					},
					assignee: {
						href: '/api/v3/users/1',
						title: 'Bal Bahadur Pun',
					},
					project: { title: 'a big project' },
				},
			}],
			[{ // missing _links.status.title
				id: 123,
				subject: 'my task',
				_links: {
					status: {
						href: '/api/v3/statuses/12',
					},
					type: {
						href: '/api/v3/types/6',
						title: 'Task',
					},
					assignee: {
						href: '/api/v3/users/1',
						title: 'Bal Bahadur Pun',
					},
					project: { title: 'a big project' },
				},
			}],
			[{ // missing project.title
				id: 123,
				subject: 'my task',
				_links: {
					status: {
						href: '/api/v3/statuses/12',
						title: 'open',
					},
					type: {
						href: '/api/v3/types/6',
						title: 'Task',
					},
					assignee: {
						href: '/api/v3/users/1',
						title: 'Bal Bahadur Pun',
					},
					project: { },
				},
			}],
		])('sets the "failed-fetching-workpackages" state on invalid responses', async (testCase) => {
			axios.get
				.mockImplementationOnce(() => sendOCSResponse(testCase))
				// mock for color requests, it should not fail because of the missing mock
				.mockImplementation(() => sendOCSResponse([]))
			await wrapper.setData({ isAdminConfigOk: true })
			await wrapper.setProps({ node: fileTwo })
			await flushPromises()
			expect(wrapper.vm.state).toBe(STATE.FAILED_FETCHING_WORKPACKAGES)
		})
		it('sets the "ok" state on empty response', async () => {
			axios.get
				.mockImplementation(() => sendOCSResponse([]))
			await wrapper.setData({ isAdminConfigOk: true })
			await wrapper.setProps({ node: fileTwo })
			await flushPromises()
			expect(wrapper.vm.state).toBe(STATE.OK)
		})
		it('sets the "error" state if the admin config is not okay', async () => {
			const returnValue = { isAdmin: false }
			getCurrentUser.mockReturnValue(returnValue)
			const wrapper = mountWrapper()
			axios.get
				.mockImplementation(() => sendOCSResponse([]))
			await wrapper.setData({
				isAdminConfigOk: false,
			})
			await wrapper.setProps({ node: fileTwo })
			await flushPromises()
			expect(wrapper.vm.state).toBe(STATE.ERROR)
			expect(wrapper.element).toMatchSnapshot()
		})
		it.each([
			{ statusColor: { color: '#A5D8FF' }, typeColor: { color: '#00B0F0' } },
			{ statusColor: { }, typeColor: { } },
		])('shows the linked workpackages', async (testCase) => {
			const wrapper = mountWrapper()
			await flushPromises()
			axiosGetSpy = vi.spyOn(axios, 'get')
				.mockImplementationOnce(() => sendOCSResponse([{
					id: 123,
					subject: 'my task',
					_links: {
						status: {
							href: '/api/v3/statuses/12',
							title: 'open',
						},
						type: {
							href: '/api/v3/types/6',
							title: 'Task',
						},
						assignee: {
							href: '/api/v3/users/1',
							title: 'Bal Bahadur Pun',
						},
						project: { title: 'a big project' },
					},
				},
				{
					id: 589,
					subject: 'नेपालमा IT उद्योग बनाउने',
					_links: {
						status: {
							href: '/api/v3/statuses/2',
							title: 'प्रगति हुदैछ',
						},
						type: {
							href: '/api/v3/types/16',
							title: 'Epic',
						},
						assignee: {
							href: '/api/v3/users/13',
							title: 'कुमारी नेपाली',
						},
						project: { title: 'नेपालको विकास गर्ने' },
					},
				}]))
				// mock for color requests
				.mockImplementationOnce(() => sendOCSResponse(testCase.statusColor))
				.mockImplementationOnce(() => sendOCSResponse(testCase.typeColor))
				.mockImplementationOnce(() => sendOCSResponse(testCase.statusColor))
				.mockImplementationOnce(() => sendOCSResponse(testCase.typeColor))
			await wrapper.setProps({ node: fileTwo })
			await flushPromises()
			expect(axiosGetSpy).toBeCalledWith(
				util.format(wpFileIdUrl, fileTwo.fileid),
				{},
			)
			expect(axiosGetSpy).toBeCalledWith(
				util.format(statusUrl, 12),
			)
			expect(axiosGetSpy).toBeCalledWith(
				util.format(typesUrl, 6),
			)
			expect(wrapper.vm.state).toBe(STATE.OK)
			const workPackages = wrapper.find(workPackagesSelector)
			expect(wrapper.find(existingRelationSelector).exists()).toBeTruthy()
			expect(workPackages.exists()).toBeTruthy()
			expect(workPackages.element).toMatchSnapshot()
		})
		it('adds every work-package only once', async () => {
			// this can happen if multiple replies arrive at the same time
			// when the user switches between files while results still loading
			wrapper = mountWrapper()
			axiosGetSpy = vi.spyOn(axios, 'get')
				.mockImplementationOnce(() => sendOCSResponse([{
					id: 123,
					subject: 'my task',
					_links: {
						status: {
							href: '/api/v3/statuses/12',
							title: 'open',
						},
						type: {
							href: '/api/v3/types/6',
							title: 'Task',
						},
						assignee: {
							href: '/api/v3/users/1',
							title: 'Bal Bahadur Pun',
						},
						project: { title: 'a big project' },
					},
				},
				{
					id: 123,
					subject: 'my task',
					_links: {
						status: {
							href: '/api/v3/statuses/12',
							title: 'open',
						},
						type: {
							href: '/api/v3/types/6',
							title: 'Task',
						},
						assignee: {
							href: '/api/v3/users/1',
							title: 'Bal Bahadur Pun',
						},
						project: { title: 'a big project' },
					},
				}]))
				.mockImplementation(() => sendOCSResponse([]))
			await wrapper.setProps({ node: fileTwo })
			await flushPromises()
			expect(axiosGetSpy).toBeCalledWith(
				util.format(wpFileIdUrl, fileTwo.fileid),
				{},
			)
			expect(wrapper.vm.state).toBe(STATE.OK)
			const workPackages = wrapper.find(workPackagesSelector)
			expect(workPackages.element).toMatchSnapshot()
		})
		it('caches the results for status and type color', async () => {
			axiosGetSpy = vi.spyOn(axios, 'get')
				.mockImplementationOnce(() => sendOCSResponse([{
					id: 123,
					subject: 'my task',
					_links: {
						status: {
							href: '/api/v3/statuses/12',
							title: 'open',
						},
						type: {
							href: '/api/v3/types/6',
							title: 'Task',
						},
						assignee: {
							href: '/api/v3/users/1',
							title: 'Bal Bahadur Pun',
						},
						project: { title: 'a big project' },
					},
				},
				{
					id: 456,
					subject: 'your task',
					_links: {
						status: {
							href: '/api/v3/statuses/12',
							title: 'open',
						},
						type: {
							href: '/api/v3/types/6',
							title: 'Task',
						},
						assignee: {
							href: '/api/v3/users/1',
							title: 'Bal Bahadur Pun',
						},
						project: { title: 'a big project' },
					},
				}]))
				.mockImplementation(() => sendOCSResponse({ color: '#FFFFFF' }))
			wrapper = mountWrapper()
			await flushPromises()

			// there should be only 3 requests even there are 2 WP
			// one request for the wp itself, one for status color one for type color
			expect(axiosGetSpy).toBeCalledTimes(3)
			expect(axiosGetSpy).toHaveBeenNthCalledWith(
				2,
				util.format(statusUrl, 12),
			)
			expect(axiosGetSpy).toHaveBeenNthCalledWith(
				3,
				util.format(typesUrl, 6),
			)
		})
	})
	describe('onSave', () => {
		it('shows the just linked workpackage', async () => {
			wrapper = mountWrapper()
			await wrapper.setData({
				fileInfo: { id: 1234 },
				workpackages: workPackagesSearchResponse,
			})
			await flushPromises()

			await wrapper.vm.onSaved(workPackagesSearchResponse[0])
			await flushPromises()

			const workPackages = wrapper.find(workPackagesSelector)
			expect(wrapper.find(existingRelationSelector).exists()).toBeTruthy()
			expect(workPackages.exists()).toBeTruthy()
			expect(workPackages.element).toMatchSnapshot()

			expect(scrollSpy).toBeCalledTimes(1)
			expect(wrapper.find(linkedWorkpackageSelector).classes()).toContain('workpackage-transition')
			vi.runAllTimers()
			expect(wrapper.find(linkedWorkpackageSelector).classes()).not.toContain('workpackage-transition')
		})
	})
	describe('when the work package is clicked', () => {
		it('opens work package in OpenProject', async () => {
			window.open = vi.fn()
			wrapper = mountWrapper()
			await wrapper.setData({
				workpackages: workPackagesSearchResponse,
				fileInfo: { id: 1234 },
				openprojectUrl: 'http://openproject',
			})
			await flushPromises()
			await wrapper.find(linkedWorkpackageSelector).trigger('click')
			await flushPromises()
			expect(window.open).toHaveBeenCalledTimes(1)
			expect(window.open).toHaveBeenCalledWith(
				'http://openproject/projects/15/work_packages/1',
			)
		})
	})
	describe('when workpackage unlink button is clicked', () => {
		it('should display a confirmation dialog box', async () => {
			wrapper = mountWrapper()
			await wrapper.setData({
				workpackages: workPackagesSearchResponse,
				fileInfo: { id: 1234 },
			})
			await flushPromises()
			expect(wrapper.find(workPackageUnlinkSelector).exists()).toBeTruthy()
			await wrapper.find(workPackageUnlinkSelector).trigger('click')
			await flushPromises()
			expect(OC.dialogs.confirmDestructive).toHaveBeenCalledTimes(1)
			expect(OC.dialogs.confirmDestructive).toHaveBeenCalledWith(
				'Are you sure you want to unlink the work package?',
				'Confirm unlink',
				{ cancel: 'Cancel', confirm: 'Unlink', confirmClasses: 'error', type: 70 },
				expect.any(Function),
				true,
			)
		})
	})
	describe('unlinkWorkPackage', () => {
		it('should unlink the work package', async () => {
			wrapper = mountWrapper()
			await flushPromises()
			const axiosGetSpy = vi.spyOn(axios, 'get')
				.mockImplementationOnce(() => sendOCSResponse([{
					_type: 'FileLink',
					id: 66,
					createdAt: '2022-04-06T05:14:24Z',
					updatedAt: '2022-04-06T05:14:24Z',
					originData: {
						id: '6',
						name: 'welcome.txt',
						mimeType: 'text/plain',
						createdAt: '1970-01-01T00:00:00Z',
						lastModifiedAt: '2022-03-30T07:39:56Z',
						createdByName: '',
						lastModifiedByName: '',
					},
					_links: {
						delete: {
							href: '/api/v3/file_links/66',
							method: 'delete',
						},
					},
				}]))
			const axiosDeleteSpy = vi.spyOn(axios, 'delete').mockImplementationOnce(() => sendOCSResponse({}))
			await wrapper.vm.unlinkWorkPackage(15, 6)
			await flushPromises()
			expect(axiosGetSpy).toBeCalledWith(util.format(wpFileLinksUrl, 15))
			expect(axiosDeleteSpy).toBeCalledWith(util.format(fileLinksUrl, 66))
			axiosGetSpy.mockRestore()
			axiosDeleteSpy.mockRestore()
		})

		it.each([
			{ HTTPStatus: 401, state: 'no-token' },
			{ HTTPStatus: 404, state: 'error' },
			{ HTTPStatus: 500, state: 'error' },
		])('sets states according to HTTP error codes', async (cases) => {
			wrapper = mountWrapper()
			await flushPromises()
			const err = new Error()
			err.response = { status: cases.HTTPStatus }
			axios.get.mockRejectedValueOnce(err)

			try {
				await wrapper.vm.unlinkWorkPackage(15, 6)
			} catch (error) {
				expect(wrapper.vm.state).toBe(cases.state)
				expect(error.message).toBe('could not fetch the delete link of work-package')
			}

		})
	})
})

function sendOCSResponse(data, status = 200) {
	return Promise.resolve({
		status,
		data: { ocs: { data } },
	})
}

function mountWrapper({ data = {}, props = {} } = {}) {
	return mount(ProjectsTab, {
		attachTo: document.body,
		global: {
			mocks: {
				t: (app, msg) => msg,
			},
			stubs: {
				SearchInput: true,
				NcAvatar: true,
			},
		},
		props: {
			node: fileOne,
			...props,
		},
		data: () => ({
			error: '',
			state: STATE.OK,
			fileInfo: {},
			workpackages: [],
			isAdminConfigOk: true,
			authMethod: AUTH_METHOD.OAUTH2,
			...data,
		}),
	})
}
